--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1 style="text-align: center; margin-top: 20%; font-family: Arial, sans-serif;">
         Welcome to PositionRat.com!
     </h1>
+    <div style="text-align: center; margin-top: 20px;">
+        <img src="rat.jpg" alt="A cool rat" style="max-width: 100%; height: auto;">
+    </div>
 </body>
 </html>
