--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to PositionRat.com</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            margin-top: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="text-align: center; margin-top: 20%; font-family: Arial, sans-serif;">
-        Welcome to PositionRat.com!
-    </h1>
-    <div style="text-align: center; margin-top: 20px;">
-        <img src="rat.jpg" alt="A cool rat" style="max-width: 100%; height: auto;">
-    </div>
+    <h1>Welcome to PositionRat.com!</h1>
+    <img src="rat.jpg" alt="A cool rat">
 </body>
 </html>
