--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         img {
             position: absolute;
-            max-width: 150px;
+            width: 300px; /* Adjust this for a bigger rat! */
             height: auto;
             cursor: grab;
         }
