--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
             height: auto;
             cursor: grab;
         }
+        .instruction {
+            margin-top: 20px;
+            font-size: 18px;
+            font-style: italic;
+            color: #555;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to PositionRat.com!</h1>
     <img id="ratImage" src="rat.jpg" alt="A cool rat">
+    <p class="instruction">Go ahead and try! Position the rat anywhere you'd like! Wow!</p>
 
     <script>
         const ratImage = document.getElementById('ratImage');
