--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             width: 300px; /* Adjust this for a bigger rat! */
             height: auto;
             cursor: grab;
+            top: 150px; /* Start the rat below the instructions */
+            left: 50%; /* Center the rat horizontally */
+            transform: translateX(-50%); /* Proper centering adjustment */
         }
         .instruction {
             margin-top: 20px;
