--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <img id="ratImage" src="rat.jpg" alt="A cool rat">
     <p class="instruction">Go ahead and try! Position the rat anywhere you'd like! Wow!</p>
 
+    <!-- Background Music -->
+    <audio id="backgroundMusic" autoplay loop>
+        <source src="music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <script>
         const ratImage = document.getElementById('ratImage');
 
