--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <img id="ratImage" src="rat.jpg" alt="A cool rat">
     <p class="instruction">Go ahead and try! Position the rat anywhere you'd like! Wow!</p>
 
-    <!-- Background Music with Controls -->
-    <audio id="backgroundMusic" controls>
+    <!-- Background Music with Loop -->
+    <audio id="backgroundMusic" autoplay loop controls>
         <source src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
