--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 </head>
 <body>
     <h1>Welcome to PositionRat.com!</h1>
+
+    <script type="text/javascript" src="https://www.free-counters.org/count/h28m"></script><br>
+ <a href='https://www.versicherungen.at/krankenzusatzversicherung/'>Krankenzusatzversicherung Vergleich</a> <script type='text/javascript' src='https://whomania.com/ctr?id=914ba171c695fce5fb37f95bf6c42f1678100285'></script>
+ 
     <img id="ratImage" src="rat.jpg" alt="A cool rat">
     <p class="instruction">Go ahead and try! Position the rat anywhere you'd like! Wow!</p>
 
