--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             width: 300px;
             height: auto;
             cursor: grab;
-            top: 200px; /* Moves rat image down */
+            top: 250px; /* Moves rat image further down */
             left: 50%; /* Center the rat horizontally */
             transform: translateX(-50%);
         }
         .instruction {
-            margin-top: 20px;
+            margin-top: 400px; /* Space below the rat image */
             font-size: 18px;
             font-style: italic;
             color: #555;
@@ -32,7 +32,7 @@
             margin-top: 10px;
         }
         .audio-player {
-            margin-top: 10px; /* Add spacing above the rat image */
+            margin-top: 20px; /* Space between counter and audio */
         }
     </style>
 </head>
