--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
             width: 300px;
             height: auto;
             cursor: grab;
-            top: 250px; /* Moves rat image further down */
+            top: 200px; /* Moves rat image down below the counter and audio */
             left: 50%; /* Center the rat horizontally */
             transform: translateX(-50%);
         }
         .instruction {
-            margin-top: 400px; /* Space below the rat image */
+            position: absolute;
+            top: 500px; /* Keep the instructions below the rat */
+            left: 50%;
+            transform: translateX(-50%);
             font-size: 18px;
             font-style: italic;
             color: #555;
@@ -32,7 +35,7 @@
             margin-top: 10px;
         }
         .audio-player {
-            margin-top: 20px; /* Space between counter and audio */
+            margin-top: 20px; /* Add spacing between counter and audio */
         }
     </style>
 </head>
@@ -42,6 +45,7 @@
     <!-- Visitor Counter -->
     <div class="counter">
         <script type="text/javascript" src="https://www.free-counters.org/count/h28m"></script><br>
+        <a href="https://www.versicherungen.at/krankenzusatzversicherung/">Krankenzusatzversicherung Vergleich</a>
         <script type="text/javascript" src="https://whomania.com/ctr?id=914ba171c695fce5fb37f95bf6c42f1678100285"></script>
     </div>
 
