--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             font-style: italic;
             color: #555;
         }
+        .comments-section {
+            margin-top: 50px; /* Add space above the comments section */
+        }
     </style>
 </head>
 <body>
@@ -61,6 +64,33 @@
 
     <!-- Instructions -->
     <p class="instruction">Go ahead and try! Position the rat anywhere you'd like! Wow!</p>
+
+    <!-- Disqus Comment Section -->
+    <div class="comments-section">
+        <h2>Comments</h2>
+        <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://positionrat-com.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </div>
+
+    <!-- Disqus Comment Count Script -->
+    <script id="dsq-count-scr" src="//positionrat-com.disqus.com/count.js" async></script>
 
     <script>
         const ratImage = document.getElementById('ratImage');
