--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             width: 300px;
             height: auto;
             cursor: grab;
-            top: 200px;
+            top: 300px; /* Start higher to avoid overlapping Disqus */
             left: 50%;
             transform: translateX(-50%);
         }
@@ -39,7 +39,7 @@
             color: #555;
         }
         .comments-section {
-            margin-top: 50px;
+            margin-top: 450px; /* Push the comments section lower */
         }
     </style>
 </head>
