--- a/speedrun.html
+++ b/speedrun.html
@@ -62,7 +62,7 @@
     <h1>Rat Speedrun</h1>
     <div class="score">Targets hit: <span id="score">0</span> / 5</div>
     <div class="highscore">Fastest time: <span id="highscore">--</span></div>
-    <p class="instruction">Drag the rat to each target as fast as you can!</p>
+    <p class="instruction">Position the rat to hit each target as fast as you can!</p>
     <img id="ratImage" src="rat.jpg" alt="A cool rat">
     <a href="index.html" class="link-back">Back to Home</a>
 
