--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
             font-style: italic;
             color: #555;
         }
-        .comments-section {
-            margin-top: 450px;
-        }
         .button-container {
-            margin-top: 40px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
         }
         .button {
             display: inline-block;
@@ -50,7 +49,7 @@
             font-size: 16px;
             font-weight: bold;
             color: white;
-            background-color: #007BFF;
+            background-color: #FF5722; /* Bright orange for attention */
             border: none;
             border-radius: 5px;
             text-decoration: none;
@@ -58,7 +57,10 @@
             transition: background-color 0.3s ease;
         }
         .button:hover {
-            background-color: #0056b3;
+            background-color: #E64A19;
+        }
+        .comments-section {
+            margin-top: 40px;
         }
     </style>
 </head>
@@ -70,6 +72,11 @@
         <script type="text/javascript" src="https://www.free-counters.org/count/h28m"></script><br>
         <a href="https://www.versicherungen.at/krankenzusatzversicherung/">Krankenzusatzversicherung Vergleich</a>
         <script type="text/javascript" src="https://whomania.com/ctr?id=914ba171c695fce5fb37f95bf6c42f1678100285"></script>
+    </div>
+
+    <!-- Button to Rat Speedrun -->
+    <div class="button-container">
+        <a href="speedrun.html" class="button">New! Play Rat Speedrun!</a>
     </div>
 
     <!-- Audio Player -->
@@ -85,11 +92,6 @@
 
     <!-- Instructions -->
     <p class="instruction">Go ahead and try! Position the rat anywhere you'd like! Wow!</p>
-
-    <!-- Button to Rat Speedrun -->
-    <div class="button-container">
-        <a href="speedrun.html" class="button">Play Rat Speedrun 🐀</a>
-    </div>
 
     <!-- Disqus Comment Section -->
     <div class="comments-section">
