--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             width: 300px;
             height: auto;
             cursor: grab;
-            top: 300px;
+            top: 200px; /* Adjusted starting position to avoid comments */
             left: 50%;
             transform: translateX(-50%);
         }
@@ -76,7 +76,7 @@
 
     <!-- Button to Rat Speedrun -->
     <div class="button-container">
-        <a href="speedrun.html" class="button">New! Play Rat Speedrun!</a>
+        <a href="speedrun.html" class="button">New!</a>
     </div>
 
     <!-- Audio Player -->
