--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             width: 300px;
             height: auto;
             cursor: grab;
-            top: 200px; /* Adjusted starting position to avoid comments */
+            top: 20%; /* Spawn rat at 20% of the viewport height */
             left: 50%;
             transform: translateX(-50%);
         }
