--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
             width: 300px;
             height: auto;
             cursor: grab;
-            top: 300px; /* Reset to a safe default */
-            left: 50%;
-            transform: translateX(-50%);
         }
         .instruction {
             margin-top: 20px;
@@ -113,6 +110,24 @@
 
     <script>
         const ratImage = document.getElementById('ratImage');
+
+        // Dynamically position the rat
+        function positionRatSafely() {
+            const headerHeight = document.querySelector('h1').offsetHeight;
+            const audioHeight = document.querySelector('.audio-player').offsetHeight;
+            const instructionsHeight = document.querySelector('.instruction').offsetHeight;
+            const buttonHeight = document.querySelector('.button-container').offsetHeight;
+
+            const margin = 50; // Extra space to ensure it's not overlapping
+            const topPosition = headerHeight + audioHeight + instructionsHeight + buttonHeight + margin;
+
+            ratImage.style.top = `${topPosition}px`;
+            ratImage.style.left = '50%';
+            ratImage.style.transform = 'translateX(-50%)';
+        }
+
+        // Call the function to position the rat after everything loads
+        window.addEventListener('load', positionRatSafely);
 
         let isDragging = false;
         let offsetX, offsetY;
