--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             width: 300px;
             height: auto;
             cursor: grab;
+            top: 300px; /* Fixed placement as in the original file */
+            left: 50%;
+            transform: translateX(-50%);
         }
         .instruction {
             margin-top: 20px;
@@ -37,7 +40,7 @@
         }
         .button-container {
             position: absolute;
-            top: 10px;
+            top: 10px; /* Place it in the top-right corner */
             right: 10px;
         }
         .button {
@@ -57,7 +60,7 @@
             background-color: #E64A19;
         }
         .comments-section {
-            margin-top: 40px;
+            margin-top: 450px;
         }
     </style>
 </head>
@@ -95,7 +98,7 @@
         <h2>Comments</h2>
         <div id="disqus_thread"></div>
         <script>
-            (function() {
+            (function() { // DON'T EDIT BELOW THIS LINE
                 var d = document, s = d.createElement('script');
                 s.src = 'https://positionrat-com.disqus.com/embed.js';
                 s.setAttribute('data-timestamp', +new Date());
@@ -110,24 +113,6 @@
 
     <script>
         const ratImage = document.getElementById('ratImage');
-
-        // Dynamically position the rat
-        function positionRatSafely() {
-            const headerHeight = document.querySelector('h1').offsetHeight;
-            const audioHeight = document.querySelector('.audio-player').offsetHeight;
-            const instructionsHeight = document.querySelector('.instruction').offsetHeight;
-            const buttonHeight = document.querySelector('.button-container').offsetHeight;
-
-            const margin = 50; // Extra space to ensure it's not overlapping
-            const topPosition = headerHeight + audioHeight + instructionsHeight + buttonHeight + margin;
-
-            ratImage.style.top = `${topPosition}px`;
-            ratImage.style.left = '50%';
-            ratImage.style.transform = 'translateX(-50%)';
-        }
-
-        // Call the function to position the rat after everything loads
-        window.addEventListener('load', positionRatSafely);
 
         let isDragging = false;
         let offsetX, offsetY;
