--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- Button to Rat Speedrun -->
     <div class="button-container">
-        <a href="speedrun.html" class="button">New!</a>
+        <a href="speedrun.html" class="button">🔥New! Play Rat Speedrun!</a>
     </div>
 
     <!-- Audio Player -->
