--- a/speedrun.html
+++ b/speedrun.html
@@ -128,7 +128,8 @@
                     // Remove the target and update the score
                     targetDiv.remove();
                     score++;
-                    scoreDisplay.textContent = `${score} / ${totalTargets}`;
+                   scoreDisplay.textContent = `${score} / 5`;
+
 
                     // Check if all targets are cleared
                     if (score === totalTargets) {
