--- a/speedrun.html
+++ b/speedrun.html
@@ -128,7 +128,7 @@
                     // Remove the target and update the score
                     targetDiv.remove();
                     score++;
-                   scoreDisplay.textContent = `${score} / 5`;
+                   scoreDisplay.textContent = `${score}`;
 
 
                     // Check if all targets are cleared
